--- a/src/Components/Login/index.css
+++ b/src/Components/Login/index.css
@@ -1,3 +1,5 @@
+@import '~antd/dist/antd.css';
+
 .login {
     background: url("https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg");
     width: 100vw;
