--- a/src/Components/Layout/SiderMenu/style.css
+++ b/src/Components/Layout/SiderMenu/style.css
@@ -2,6 +2,7 @@
     height: 64px;
     position: relative;
     line-height: 64px;
+    padding-left: 24px;
     transition: all 0.3s;
     background: #002140;
     overflow: hidden;
@@ -28,6 +29,8 @@
     box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
     position: relative;
     z-index: 10;
+    overflow: auto;
+    left: 0;
 }
 
 .sider .ligth {
