--- a/src/Pages/Login/index.css
+++ b/src/Pages/Login/index.css
@@ -22,7 +22,7 @@
     justify-content: space-between;
 }
 
-.logo {
+.loginlogo {
     text-align: center;
     cursor: pointer;
     margin-bottom: 24px;
@@ -30,12 +30,12 @@
     justify-content: center;
     align-items: center;
 }
-.logo img {
+.loginlogo img {
     width: 40px;
     margin-right: 8px;
 }
 
-.logo span {
+.loginlogo span {
     vertical-align: text-bottom;
     font-size: 16px;
     text-transform: uppercase;
