删除管理员相关内容

--- a/src/Pages/Login/index.css
+++ b/src/Pages/Login/index.css
@@ -1,3 +1,10 @@
+body {
+    background-image: url("https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg");
+    background-repeat: no-repeat;
+    background-position: center 110px;
+    background-size: 100%;
+}
+
 .form {
     position: absolute;
     top: 50%;
@@ -43,3 +50,36 @@
     font-weight: 700;
     /*color: @primary-color;*/
 }
+
+
+
+@import '~antd/dist/antd.css';
+
+.ant-menu-horizontal {
+    border-bottom: 0px;
+}
+
+.ant-menu-horizontal > .ant-menu-item {
+    border-top: 2px solid transparent;
+    border-bottom: 0px;
+}
+
+.ant-menu-horizontal > .ant-menu-item:hover {
+    border-top: 2px solid #1890ff;
+    border-bottom: 0px;
+}
+
+.ant-menu-horizontal > .ant-menu-item-active {
+    border-top: 2px solid #1890ff;
+    border-bottom: 0px;
+}
+
+.ant-menu-horizontal > .ant-menu-item-selected {
+    border-top: 2px solid #1890ff;
+}
+
+.ant-menu-horizontal > .ant-menu-item-selected{
+    border-bottom: 0px;
+}
+
+
