--- a/src/Components/EltImport/style.css
+++ b/src/Components/EltImport/style.css
@@ -1,5 +1,5 @@
-.upload {
-    height: 100px;
+.uploadContainer {
+    width: 100%;
 }
 
 .item {
@@ -12,4 +12,24 @@
 
 .submitButton {
     width: 100%;
+}
+
+.vertical-center-modal {
+    text-align: center;
+    white-space: nowrap;
+}
+
+.vertical-center-modal:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    width: 0;
+}
+
+.vertical-center-modal .ant-modal {
+    display: inline-block;
+    vertical-align: middle;
+    top: 0;
+    text-align: left;
 }
