--- a/src/Components/Layout/GlobalFooter/style.css
+++ b/src/Components/Layout/GlobalFooter/style.css
@@ -25,3 +25,8 @@
     /*color: @text-color-secondary;*/
     /*font-size: @font-size-base;*/
 }
+
+.like {
+    display: flex;
+    justify-content: center;
+}
