--- a/src/Components/Layout/SiderMenu/style.css
+++ b/src/Components/Layout/SiderMenu/style.css
@@ -71,3 +71,13 @@
     transition: opacity 0.3s , width 0.3s ;
     opacity: 1;
 }
+
+@keyframes blink{
+    0%{opacity: 1;}
+    100%{opacity: 0;}
+}
+
+.blink{
+    color: #dd4814;
+    animation: blink 2s linear infinite;
+}
