--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+
+
+    background-image: url(https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg);
+    background-repeat: no-repeat;
+    background-position: center 110px;
+    background-size: 100%;
 }
 
 
